# log-plugin

./: CHANGELOG.md  log-plug.cabal
src/: Plug.hs  ToLogPlug.hs
