cabal-version:      3.0
name:               log-plug
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Danil Berestov
maintainer:         goosedb@yandex.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Plug, ToLogPlug
    build-depends:    base, aeson, ghc, uniplate, text, template-haskell, mtl
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall
